--- a/src/components/navbar/style.module.scss
+++ b/src/components/navbar/style.module.scss
@@ -1,3 +1,23 @@
-.head{
-    color: black;
+.newnav{
+    padding-top: 0 !important;
+    background-color: #14274A;
+}
+
+.navbar-contents{
+    margin-left: auto;
+}
+
+.navbar-hyperlinks{
+    color: #fff !important;
+    padding: 0 .7rem;
+    text-decoration: none;
+}
+
+.logo-div{
+    padding-top: 0 !important;
+}
+
+.logo{
+    width: 40%;
+
 }
